--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,6 @@
 
 # Flutter/Dart/Pub related
 **/doc/api/
-**/ios/Flutter/.last_build_id
 .dart_tool/
 .flutter-plugins
 .flutter-plugins-dependencies
@@ -42,3 +41,9 @@ app.*.map.json
 
 # Exceptions to above rules.
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
+.packages
+.packages
+.flutter-plugins-dependencies
+.packages
+.flutter-plugins-dependencies
+.flutter-plugins
