--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: scanin
+name: example
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -28,10 +28,33 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+  image_picker: ^0.6.7+3
+  image_cropper:
+  flutter_full_pdf_viewer: ^1.0.6
+  pdf: ^1.9.0
+  images_to_pdf: ^0.0.1
+  printing: ^3.5.0
+  splashscreen: ^1.2.0
+  flutter_plugin_pdf_viewer: ^1.0.7
+  sqflite: ^1.3.1
+  path_provider: ^1.6.11
+  edge_detection: ^1.0.5
+  pdf_render:
+  share_extend:
+  permission_handler:
+  directory_picker:
+  focused_menu:
+  shared_preferences: 
+  step_progress_indicator: ^0.2.4+7
 
+
+    
 dev_dependencies:
+
   flutter_test:
     sdk: flutter
+
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -45,9 +68,21 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/logog.png
+    - assets/sc1.png
+    - assets/sc2.png
+    - assets/sc3.png
+    - assets/sc4.png
+    - assets/sc5.png
+    - assets/playstore.png  
+    - assets/forward.png
+
+
+
+
+
+  
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -60,17 +95,11 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: space
+      fonts:
+        - asset: fonts/space.ttf
+
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
