--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,25 +27,25 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.3
-  image_picker: ^0.6.7+3
-  image_cropper:
-  flutter_full_pdf_viewer: ^1.0.6
-  pdf: ^1.9.0
-  images_to_pdf: ^0.0.1
-  printing: ^3.5.0
-  splashscreen: ^1.2.0
-  flutter_plugin_pdf_viewer: ^1.0.7
-  sqflite: ^1.3.1
   path_provider: ^1.6.11
+  image_picker: ^0.6.4
+  image_cropper: ^1.2.3
+  focused_menu: ^1.0.1
+  directory_picker: ^1.0.0
+  pdf: ^1.9.0
+  share_extend: ^1.1.9
+  url_launcher: ^5.4.11
+  cupertino_icons: ^0.1.3
+  flutter_full_pdf_viewer: ^1.0.6
+  permission_handler: ^3.2.2
+  shared_preferences: ^0.5.7+3
+  flutter_speed_dial: ^1.2.5
   edge_detection: ^1.0.5
-  pdf_render:
-  share_extend:
-  permission_handler:
-  directory_picker:
-  focused_menu:
-  shared_preferences: 
+  flutter_screen_lock: ^1.2.4
   step_progress_indicator: ^0.2.4+7
+
+
+
 
 
     
