adding the icons,polishing the ui and making final touches

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   edge_detection: ^1.0.5
   flutter_screen_lock: ^1.2.4
   step_progress_indicator: ^0.2.4+7
+  aes_crypt: ^0.1.1
 
 
 
@@ -77,6 +78,8 @@ flutter:
     - assets/sc5.png
     - assets/playstore.png  
     - assets/forward.png
+    - assets/top.png
+    - assets/pd.png
 
 
 
